@@ -4152,6 +4152,14 @@ lava_effects()
 	for(obj = invent; obj; obj = obj2) {
 	    obj2 = obj->nobj;
 	    if(is_organic(obj) && !obj->oerodeproof) {
+		/* prevent the Book of the Dead from being destroyed when
+		 * the player falls into lava. */
+		if (obj->otyp == SPE_BOOK_OF_THE_DEAD) {
+			if (!Blind && usurvive)
+				pline("%s glows a strange %s, but remains intact.",
+						The(xname(obj)), hcolor("dark red"));
+			continue;
+		}
 		if(obj->owornmask) {
 		    if (usurvive)
 			Your("%s into flame!", aobjnam(obj, "burst"));
